--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
           </ul>
         </div>
         <div class="date">
-          <p>Genève</p>
-          <p>01/2021 - Present</p>
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">01/2021</p>
+          <p style="margin: 0;">-</p>
+          <p style="margin-top: 0;">Présent</p>
         </div>
       </div>
       <!-- Second experience -->
@@ -51,8 +53,10 @@
           </ul>
         </div>
         <div class="date">
-          <p>Genève</p>
-          <p>05/2020 - 12/2020</p>
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">05/2020</p>
+          <p style="margin: 0;">-</p>
+          <p style="margin-top: 0;">12/2020</p>
         </div>
       </div>
       <!-- Third experience -->
@@ -69,8 +73,10 @@
           </ul>
         </div>
         <div class="date">
-          <p>Genève</p>
-          <p>03/2018 - 04/2020</p>
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">03/2018</p>
+          <p style="margin: 0;">-</p>
+          <p style="margin-top: 0;">04/2020</p>
         </div>
       </div>
       <!-- Fourth experience -->
@@ -86,8 +92,10 @@
           </ul>
         </div>
         <div class="date">
-          <p>Genève</p>
-          <p>01/2016 - 12/2017</p>
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">01/2016</p>
+          <p style="margin: 0;">-</p>
+          <p style="margin-top: 0;">12/2017</p>
         </div>
       </div>
     </div>
@@ -101,7 +109,9 @@
           <h5>DAS en supply chain management</h5>
         </div>
         <div class="date">
-          <p>2019 - 2019</p>
+          <p style="margin-bottom: 0;">2019</p>
+          <p style="margin: 0;">-</p>
+          <p style="margin-top: 0;">2019</p>
         </div>
       </div>
       <!-- Second formation -->
@@ -111,14 +121,16 @@
           <h5>Brevet fédéral d'agent de processus</h5>
         </div>
         <div class="date">
-          <p>2016 - 2018</p>
+          <p style="margin-bottom: 0;">2016</p>
+          <p style="margin: 0;">-</p>
+          <p style="margin-top: 0;">2018</p>
         </div>
       </div>
     </div>
     <!-- Languages -->
     <div class="category">
       <h3>Langues</h3>
-      <div class="card" style="justify-content: left;">
+      <div id="card-languages" class="card">
         <!-- First language -->
         <div class="languages">
           <h5>Français</h5>
