Background image added and profile pic

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     <!-- Others -->
     <div class="category">
       <h3>Formations continues</h3>
+      <p>Marchés publics - novembre 2024</p>
       <p>Développement durable et achats responsables - mai 2023</p>
       <p>Stratégie achat en réseau - décembre 2022</p>
       <p>Droit des contrats d'achats et de services - juin 2021</p>
