--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <p>Développement durable et achats responsables - mai 2023</p>
       <p>Stratégie achat en réseau - décembre 2022</p>
       <p>Droit des contrats d'achats et de services - juin 2021</p>
-      <p>Marchés publics - novembre 2019.</p>
+      <p>Marchés publics - novembre 2019</p>
     </div>
   </div>
 </body>
