--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <img class="img-circle" src="images/profil.jpg" alt="michael_pic">
       <h2>Michael Barcellini</h2>
       <h4>Acheteur</h4>
-      <p>+41 ** *** ** ** · ************@gmail.com · <a
-          href="https://www.linkedin.com/in/michaelbarcellini">LinkedIn</a> · Genève, Suisse</p>
+      <p>+41 ** *** ** ** &#8226; ************@gmail.com &#8226; <a
+          href="https://www.linkedin.com/in/michaelbarcellini">LinkedIn</a> &#8226; Genève, Suisse</p>
     </div>
     <!-- Experiences -->
     <div class="category">
@@ -37,7 +37,7 @@
         <div class="date">
           <p><b>Genève</b></p>
           <p style="margin-bottom: 0;">01/2021</p>
-          <p style="margin: 0;">-</p>
+          <p style="margin: 0; align-self: center;">-</p>
           <p style="margin-top: 0;">Présent</p>
         </div>
       </div>
@@ -55,7 +55,7 @@
         <div class="date">
           <p><b>Genève</b></p>
           <p style="margin-bottom: 0;">05/2020</p>
-          <p style="margin: 0;">-</p>
+          <p style="margin: 0; align-self: center;">-</p>
           <p style="margin-top: 0;">12/2020</p>
         </div>
       </div>
@@ -75,7 +75,7 @@
         <div class="date">
           <p><b>Genève</b></p>
           <p style="margin-bottom: 0;">03/2018</p>
-          <p style="margin: 0;">-</p>
+          <p style="margin: 0; align-self: center;">-</p>
           <p style="margin-top: 0;">04/2020</p>
         </div>
       </div>
@@ -94,7 +94,7 @@
         <div class="date">
           <p><b>Genève</b></p>
           <p style="margin-bottom: 0;">01/2016</p>
-          <p style="margin: 0;">-</p>
+          <p style="margin: 0; align-self: center;">-</p>
           <p style="margin-top: 0;">12/2017</p>
         </div>
       </div>
@@ -107,10 +107,17 @@
         <div class="description">
           <h4>Université de Genève (GSEM) / Haute école de Gestion</h4>
           <h5>DAS en supply chain management</h5>
+          <ul>
+            <li><strong>Stratégie d'achat:</strong> Expertise en stratégies avancées et négociation complexe.</li>
+            <li><strong>Analyse Supply Chain:</strong> Vision stratégique et anticipation des risques.</li>
+            <li><strong>Planification & Flux:</strong> Gestion de la demande et optimisation des flux.</li>
+            <li><strong>Innovation & Digital:</strong> Intégration des technologies et digitalisation.</li>
+            <li><strong>RSE:</strong> Intégration des enjeux du développement durable dans la politique d'achat.</li>
+          </ul>
         </div>
         <div class="date">
           <p style="margin-bottom: 0;">2019</p>
-          <p style="margin: 0;">-</p>
+          <p style="margin: 0; align-self: center;">-</p>
           <p style="margin-top: 0;">2019</p>
         </div>
       </div>
@@ -119,10 +126,16 @@
         <div class="description">
           <h4>ESG Prilly</h4>
           <h5>Brevet fédéral d'agent de processus</h5>
+          <ul>
+            <li><strong>Analyse et optimisation:</strong> Capacité à analyser les données, identifier les axes d'amélioration et optimiser la chaîne d'approvisionnement.</li>
+            <li><strong>Gestion de projet:</strong> Maîtrise de la planification, du suivi des commandes et de la coordination avec les fournisseurs.</li>
+            <li><strong>Outils numériques:</strong> Utilisation experte des logiciels de gestion de données et de planification.</li>
+            <li><strong>Communication:</strong> Aptitude à collaborer avec différents partenaires internes et externes.</li>
+          </ul>
         </div>
         <div class="date">
           <p style="margin-bottom: 0;">2016</p>
-          <p style="margin: 0;">-</p>
+          <p style="margin: 0; align-self: center;">-</p>
           <p style="margin-top: 0;">2018</p>
         </div>
       </div>
