--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
             <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
             <h5>Acheteur stratégique</h5>
             <ul>
-              <li>Gestion des achats stratégiques blocs opératoires, suppléance fonctionnelle, stérilisation et pharmacie
-              </li>
-              <li>Garant de la procédure d'appel d'offres marchés publics</li>
-              <li>Mise en place et suivi de conditions cadres d'achats et de maintenance pour les hôpitaux romands</li>
+              <li>Pilotage des investissements pour des domaines critiques, tels que les blocs opératoires, la suppléance fonctionnelle, la stérilisation ou encore la pharmacie.</li>
+              <li>Établissement de relations étroites avec les fournisseurs industriels et les utilisateurs finaux afin de comprendre les besoins spécifiques et de négocier les conditions les plus avantageuses.</li>
+              <li>Expertise en marchés publics, garant de la conformité des procédures d'appels d'offres, et mise en œuvre d'appels d'offres conjoints pour optimiser les achats des hôpitaux romands.</li>
             </ul>
           </div>
           <div class="date">
@@ -47,9 +46,8 @@
             <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
             <h5>Acheteur produits</h5>
             <ul>
-              <li>Gestion des portefeuilles de thérapie respiratoire, CEC/ECMO, préparation opératoire</li>
-              <li>Définition des besoins concernant les packs et sets avec les utilisateurs et lancement d'appel d'offres
-              </li>
+              <li>Gestion de portefeuilles d'achats complexes (thérapie respiratoire, CEC/ECMO, préparation opératoire), en étroite collaboration avec les équipes médicales.</li>
+              <li>Conduite de projets d'appels d'offres pour les packs et sets, incluant l'analyse des besoins, la rédaction des cahiers des charges et le suivi des fournisseurs.</li>
             </ul>
           </div>
           <div class="date">
@@ -65,11 +63,11 @@
             <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
             <h5>Assistant achat</h5>
             <ul>
-              <li>Gestion des demandes de référencement et création d'articles</li>
-              <li>Gestion des contrats</li>
+              <li>Traitement des demandes de référencement et challenge du besoin</li>
+              <li>Mise en place et suivi des contrats</li>
               <li>Gestion des ruptures de stocks</li>
+              <li>Suivi et traitements des litiges prix</li>
               <li>Projet migration stock informatique et traçabilité</li>
-              <li>Service client interne (suivi de commande et litiges)</li>
             </ul>
           </div>
           <div class="date">
@@ -77,25 +75,6 @@
             <p style="margin-bottom: 0;">03/2018</p>
             <p style="margin: 0; align-self: center;">-</p>
             <p style="margin-top: 0;">04/2020</p>
-          </div>
-        </div>
-        <!-- Fourth experience -->
-        <div class="card">
-          <div class="description">
-            <h4>HUG - Hôpitaux Universitaires de Genève</h4>
-            <h5>Gestionnaire en logistique</h5>
-            <ul>
-              <li>Approvisionnement et mise en stock</li>
-              <li>Préparation des commandes</li>
-              <li>Gestion des fournisseurs et suivi de commande</li>
-              <li>Service client (accueil/renseignements, gestion de commande, retour marchandises)</li>
-            </ul>
-          </div>
-          <div class="date">
-            <p><b>Genève</b></p>
-            <p style="margin-bottom: 0;">01/2016</p>
-            <p style="margin: 0; align-self: center;">-</p>
-            <p style="margin-top: 0;">12/2017</p>
           </div>
         </div>
       </div>
