--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="card">
           <div class="description">
             <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
-            <h5>Acheteur produits</h5>
+            <h5>Acheteur</h5>
             <ul>
               <li>Gestion de portefeuilles d'achats complexes (thérapie respiratoire, CEC/ECMO, préparation opératoire), en étroite collaboration avec les équipes médicales.</li>
               <li>Conduite de projets d'appels d'offres pour les packs et sets, incluant l'analyse des besoins, la rédaction des cahiers des charges et le suivi des fournisseurs.</li>
