--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h5>Acheteur stratégique</h5>
             <ul>
               <li>Pilotage des investissements pour des domaines critiques, tels que les blocs opératoires, la suppléance fonctionnelle, la stérilisation ou encore la pharmacie.</li>
-              <li>Établissement de relations étroites avec les fournisseurs industriels et les utilisateurs finaux afin de comprendre les besoins spécifiques et de négocier les conditions les plus avantageuses.</li>
+              <li>Établissement de relations étroites avec les fournisseurs et les utilisateurs afin de comprendre les besoins spécifiques et négocier les conditions les plus avantageuses.</li>
               <li>Expertise en marchés publics, garant de la conformité des procédures d'appels d'offres, et mise en œuvre d'appels d'offres conjoints pour optimiser les achats des hôpitaux romands.</li>
             </ul>
           </div>
@@ -87,7 +87,7 @@
             <h4>Université de Genève (GSEM) / Haute école de Gestion</h4>
             <h5>DAS en supply chain management</h5>
             <ul>
-              <li><strong>Stratégie d'achat:</strong> Expertise en stratégies avancées et négociation complexe.</li>
+              <li><strong>Stratégie d'achat:</strong> Expertise en stratégies avancées et négociations complexes.</li>
               <li><strong>Analyse Supply Chain:</strong> Vision stratégique et anticipation des risques.</li>
               <li><strong>Planification & Flux:</strong> Gestion de la demande et optimisation des flux.</li>
               <li><strong>Innovation & Digital:</strong> Intégration des technologies et digitalisation.</li>
@@ -108,7 +108,7 @@
             <ul>
               <li><strong>Analyse et optimisation:</strong> Capacité à analyser les données, identifier les axes d'amélioration et optimiser la chaîne d'approvisionnement.</li>
               <li><strong>Gestion de projet:</strong> Maîtrise de la planification, du suivi des commandes et de la coordination avec les fournisseurs.</li>
-              <li><strong>Outils numériques:</strong> Utilisation experte des logiciels de gestion de données et de planification.</li>
+              <li><strong>Outils numériques:</strong> Utilisation des logiciels de gestion de données et de planification.</li>
               <li><strong>Communication:</strong> Aptitude à collaborer avec différents partenaires internes et externes.</li>
             </ul>
           </div>
