Add two more experiences and fix print issue

--- a/index.html
+++ b/index.html
@@ -1,172 +1,217 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <title>Curriculum vitae - Michael Barcellini</title>
-    <meta name="description" content="Curriculum vitae de Michael Barcellini">
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
+<head>
+  <title>Curriculum vitae - Michael Barcellini</title>
+  <meta name="description" content="Curriculum vitae de Michael Barcellini">
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 
-  <body>
-    <div class="container">
-      <div class="banner">
-        <img class="img-circle" src="images/profil.jpg" alt="michael_pic">
-        <h2>Michael Barcellini</h2>
-        <h4>Acheteur</h4>
-        <p>+41 ** *** ** ** &#8226; ************@gmail.com &#8226; <a
-            href="https://www.linkedin.com/in/michaelbarcellini">LinkedIn</a> &#8226; Genève, Suisse</p>
-      </div>
-      <!-- Experiences -->
-      <div class="category">
-        <h3>Expériences</h3>
-        <!-- First experience -->
-        <div class="card">
-          <div class="description">
-            <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
-            <h5>Acheteur stratégique</h5>
-            <ul>
-              <li>Pilotage des investissements pour des domaines critiques, tels que les blocs opératoires, la suppléance fonctionnelle, la stérilisation ou encore la pharmacie.</li>
-              <li>Établissement de relations étroites avec les fournisseurs et les utilisateurs afin de comprendre les besoins spécifiques et négocier les conditions les plus avantageuses.</li>
-              <li>Expertise en marchés publics, garant de la conformité des procédures d'appels d'offres, et mise en œuvre d'appels d'offres conjoints pour optimiser les achats des hôpitaux romands.</li>
-            </ul>
-          </div>
-          <div class="date">
-            <p><b>Genève</b></p>
-            <p style="margin-bottom: 0;">01/2021</p>
-            <p style="margin: 0; align-self: center;">-</p>
-            <p style="margin-top: 0;">Présent</p>
-          </div>
+<body>
+  <div class="container">
+    <div class="banner">
+      <img class="img-circle" src="images/profil.jpg" alt="michael_pic">
+      <h2>Michael Barcellini</h2>
+      <h4>Acheteur</h4>
+      <p>+41 ** *** ** ** &#8226; *******.**********@gmail.com &#8226; <a
+          href="https://www.linkedin.com/in/michaelbarcellini">LinkedIn</a> &#8226; Genève, Suisse</p>
+    </div>
+    <!-- Experiences -->
+    <div class="category print-only">
+      <h3>Expériences</h3>
+      <!-- First experience -->
+      <div class="card">
+        <div class="description">
+          <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
+          <h5>Acheteur stratégique</h5>
+          <ul>
+            <li>Pilotage des investissements pour des domaines critiques, tels que les blocs opératoires, la suppléance
+              fonctionnelle, la stérilisation ou encore la pharmacie.</li>
+            <li>Établissement de relations étroites avec les fournisseurs et les utilisateurs afin de comprendre les
+              besoins spécifiques et négocier les conditions les plus avantageuses.</li>
+            <li>Expertise en marchés publics, garant de la conformité des procédures d'appels d'offres, et mise en œuvre
+              d'appels d'offres conjoints pour optimiser les achats des hôpitaux romands.</li>
+          </ul>
         </div>
-        <!-- Second experience -->
-        <div class="card">
-          <div class="description">
-            <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
-            <h5>Acheteur</h5>
-            <ul>
-              <li>Gestion de portefeuilles d'achats complexes (thérapie respiratoire, CEC/ECMO, préparation opératoire), en étroite collaboration avec les équipes médicales.</li>
-              <li>Conduite de projets d'appels d'offres pour les packs et sets, incluant l'analyse des besoins, la rédaction des cahiers des charges et le suivi des fournisseurs.</li>
-            </ul>
-          </div>
-          <div class="date">
-            <p><b>Genève</b></p>
-            <p style="margin-bottom: 0;">05/2020</p>
-            <p style="margin: 0; align-self: center;">-</p>
-            <p style="margin-top: 0;">12/2020</p>
-          </div>
-        </div>
-        <!-- Third experience -->
-        <div class="card">
-          <div class="description">
-            <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
-            <h5>Assistant achat</h5>
-            <ul>
-              <li>Traitement des demandes de référencement et challenge du besoin</li>
-              <li>Mise en place et suivi des contrats</li>
-              <li>Gestion des ruptures de stocks</li>
-              <li>Suivi et traitements des litiges prix</li>
-              <li>Projet migration stock informatique et traçabilité</li>
-            </ul>
-          </div>
-          <div class="date">
-            <p><b>Genève</b></p>
-            <p style="margin-bottom: 0;">03/2018</p>
-            <p style="margin: 0; align-self: center;">-</p>
-            <p style="margin-top: 0;">04/2020</p>
-          </div>
+        <div class="date">
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">01/2021</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">Présent</p>
         </div>
       </div>
-      <!-- Formations -->
-      <div class="category">
-        <h3>Formations</h3>
-        <!-- First formation -->
-        <div class="card">
-          <div class="description">
-            <h4>Université de Genève (GSEM) / Haute école de Gestion</h4>
-            <h5>DAS en supply chain management</h5>
-            <ul>
-              <li><strong>Stratégie d'achat:</strong> Expertise en stratégies avancées et négociations complexes.</li>
-              <li><strong>Analyse Supply Chain:</strong> Vision stratégique et anticipation des risques.</li>
-              <li><strong>Planification & Flux:</strong> Gestion de la demande et optimisation des flux.</li>
-              <li><strong>Innovation & Digital:</strong> Intégration des technologies et digitalisation.</li>
-              <li><strong>RSE:</strong> Intégration des enjeux du développement durable dans la politique d'achat.</li>
-            </ul>
-          </div>
-          <div class="date">
-            <p style="margin-bottom: 0;">2019</p>
-            <p style="margin: 0; align-self: center;">-</p>
-            <p style="margin-top: 0;">2019</p>
-          </div>
+      <!-- Second experience -->
+      <div class="card">
+        <div class="description">
+          <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
+          <h5>Acheteur</h5>
+          <ul>
+            <li>Gestion de portefeuilles d'achats complexes (thérapie respiratoire, CEC/ECMO, préparation opératoire),
+              en étroite collaboration avec les équipes médicales.</li>
+            <li>Conduite de projets d'appels d'offres pour les packs et sets, incluant l'analyse des besoins, la
+              rédaction des cahiers des charges et le suivi des fournisseurs.</li>
+          </ul>
         </div>
-        <!-- Second formation -->
-        <div class="card">
-          <div class="description">
-            <h4>ESG Prilly</h4>
-            <h5>Brevet fédéral d'agent de processus</h5>
-            <ul>
-              <li><strong>Analyse et optimisation:</strong> Capacité à analyser les données, identifier les axes d'amélioration et optimiser la chaîne d'approvisionnement.</li>
-              <li><strong>Gestion de projet:</strong> Maîtrise de la planification, du suivi des commandes et de la coordination avec les fournisseurs.</li>
-              <li><strong>Outils numériques:</strong> Utilisation des logiciels de gestion de données et de planification.</li>
-              <li><strong>Communication:</strong> Aptitude à collaborer avec différents partenaires internes et externes.</li>
-            </ul>
-          </div>
-          <div class="date">
-            <p style="margin-bottom: 0;">2016</p>
-            <p style="margin: 0; align-self: center;">-</p>
-            <p style="margin-top: 0;">2018</p>
-          </div>
+        <div class="date">
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">05/2020</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">12/2020</p>
         </div>
       </div>
-      <!-- Languages -->
-      <div class="category">
-        <h3>Langues</h3>
-        <div id="card-languages" class="card">
-          <!-- First language -->
-          <div class="languages">
-            <h5>Français</h5>
-            <p>Langue maternelle</p>
-            <div class="circles">
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-            </div>
-          </div>
-          <!-- Second language -->
-          <div class="languages">
-            <h5>Anglais</h5>
-            <p>Courant</p>
-            <div class="circles">
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-solid fa-circle"></i>
-              <i class="fa-regular fa-circle"></i>
-            </div>
-          </div>
+      <!-- Third experience -->
+      <div class="card">
+        <div class="description">
+          <h4>CAIB - Hôpitaux Universitaires de Genève et Centre Hospitalier Universitaire Vaudois</h4>
+          <h5>Assistant achat</h5>
+          <ul>
+            <li>Traitement des demandes de référencement et réévalutation du besoin</li>
+            <li>Mise en place et suivi des contrats</li>
+            <li>Gestion des ruptures de stocks</li>
+            <li>Suivi et traitements des litiges prix</li>
+            <li>Projet migration stock informatique et traçabilité</li>
+          </ul>
+        </div>
+        <div class="date">
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">03/2018</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">04/2020</p>
         </div>
       </div>
-      <!-- Skills -->
-      <div class="category">
-        <h3>Compétences</h3>
-        <div class="card">
-          <p>Appels d'offres · Sourcing · Analyse coût total TCO · Négociation · Excel · Qlikview · Marchés publics ·
-            Évaluation fournisseurs</p>
+      <!-- Fourth experience -->
+      <div class="card">
+        <div class="description">
+          <h4>Hôpitaux Universitaires de Genève</h4>
+          <h5>Magasinier</h5>
+          <ul>
+            <li>Préparation et suivi des commandes pour les différents services de l'hôpital</li>
+            <li>Réception, contrôle qualité et gestion des marchandises entrantes</li>
+            <li>Gestion des retours et support aux utilisateurs internes</li>
+          </ul>
+        </div>
+        <div class="date">
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">09/2016</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">12/2017</p>
         </div>
       </div>
-      <!-- Others -->
-      <div class="category">
-        <h3>Formations continues</h3>
-        <p>Marchés publics - novembre 2024</p>
-        <p>Développement durable et achats responsables - mai 2023</p>
-        <p>Stratégie achat en réseau - décembre 2022</p>
-        <p>Droit des contrats d'achats et de services - juin 2021</p>
-        <p>Marchés publics - novembre 2019</p>
+      <!-- Fifth experience -->
+      <div class="card">
+        <div class="description">
+          <h4>Hôpitaux Universitaires de Genève</h4>
+          <h5>Gestionnaire de stock - Blocs opératoires</h5>
+          <ul>
+            <li>Réapprovisionnement et gestion des stocks de matériel médical sur plusieurs blocs opératoires</li>
+            <li>Suivi des consommations et pilotage des commandes</li>
+            <li>Réception, contrôle et mise en stock des livraisons en respectant la traçabilité</li>
+          </ul>
+        </div>
+        <div class="date">
+          <p><b>Genève</b></p>
+          <p style="margin-bottom: 0;">01/2016</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">07/2016</p>
+        </div>
       </div>
     </div>
-  </body>
+    <!-- Formations -->
+    <div class="category">
+      <h3>Formations</h3>
+      <!-- First formation -->
+      <div class="card">
+        <div class="description">
+          <h4>Université de Genève (GSEM) / Haute école de Gestion</h4>
+          <h5>DAS en supply chain management</h5>
+          <ul>
+            <li><strong>Stratégie d'achat:</strong> Expertise en stratégies avancées et négociations complexes.</li>
+            <li><strong>Analyse Supply Chain:</strong> Vision stratégique et anticipation des risques.</li>
+            <li><strong>Planification & Flux:</strong> Gestion de la demande et optimisation des flux.</li>
+            <li><strong>Innovation & Digital:</strong> Intégration des technologies et digitalisation.</li>
+            <li><strong>RSE:</strong> Intégration des enjeux du développement durable dans la politique d'achat.</li>
+          </ul>
+        </div>
+        <div class="date">
+          <p style="margin-bottom: 0;">2019</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">2019</p>
+        </div>
+      </div>
+      <!-- Second formation -->
+      <div class="card">
+        <div class="description">
+          <h4>ESG Prilly</h4>
+          <h5>Brevet fédéral d'agent de processus</h5>
+          <ul>
+            <li><strong>Analyse et optimisation:</strong> Capacité à analyser les données, identifier les axes
+              d'amélioration et optimiser la chaîne d'approvisionnement.</li>
+            <li><strong>Gestion de projet:</strong> Maîtrise de la planification, du suivi des commandes et de la
+              coordination avec les fournisseurs.</li>
+            <li><strong>Outils numériques:</strong> Utilisation des logiciels de gestion de données et de
+              planification.</li>
+            <li><strong>Communication:</strong> Aptitude à collaborer avec différents partenaires internes et
+              externes.</li>
+          </ul>
+        </div>
+        <div class="date">
+          <p style="margin-bottom: 0;">2016</p>
+          <p style="margin: 0; align-self: center;">-</p>
+          <p style="margin-top: 0;">2018</p>
+        </div>
+      </div>
+    </div>
+    <!-- Languages -->
+    <div class="category">
+      <h3>Langues</h3>
+      <div id="card-languages" class="card">
+        <!-- First language -->
+        <div class="languages">
+          <h5>Français</h5>
+          <p>Langue maternelle</p>
+          <div class="circles">
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+          </div>
+        </div>
+        <!-- Second language -->
+        <div class="languages">
+          <h5>Anglais</h5>
+          <p>Courant</p>
+          <div class="circles">
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-solid fa-circle"></i>
+            <i class="fa-regular fa-circle"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Skills -->
+    <div class="category">
+      <h3>Compétences</h3>
+      <div class="card">
+        <p>Appels d'offres · Sourcing · Analyse coût total TCO · Négociation · Excel · Qlikview · Marchés publics ·
+          Évaluation fournisseurs</p>
+      </div>
+    </div>
+    <!-- Others -->
+    <div class="category">
+      <h3>Formations continues</h3>
+      <p>Marchés publics - novembre 2024</p>
+      <p>Développement durable et achats responsables - mai 2023</p>
+      <p>Stratégie achat en réseau - décembre 2022</p>
+      <p>Droit des contrats d'achats et de services - juin 2021</p>
+      <p>Marchés publics - novembre 2019</p>
+    </div>
+  </div>
+</body>
 
 </html>
